# cppari

./: .gitignore  .gitmodules  README.md  meson.build
include/: Bridge.hxx  Channel.hxx  Client.hxx  Playback.hxx  Recording.hxx
src/: Bridge.cxx  Channel.cxx  Client.cxx  Playback.cxx  Recording.cxx
